--- a/app/src/main/res/values-cs/strings.xml
+++ b/app/src/main/res/values-cs/strings.xml
@@ -875,7 +875,7 @@
   <string name="MessageRecord_you_updated_group">Upravili jste skupinu.</string>
   <string name="MessageRecord_the_group_was_updated">Skupina byla aktualizována.</string>
   <string name="MessageRecord_you_called_date">Volali jste · %1$s</string>
-  <string name="MessageRecord_missed_call_date">Zmeškaný hovor · %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_date">Zmeškaný hovor · %1$s</string> -->
   <string name="MessageRecord_s_updated_group">%s upravil(a) skupinu.</string>
   <string name="MessageRecord_s_called_you_date">%1$s vám volal(a) · %2$s</string>
   <string name="MessageRecord_called_s">Volán %s</string>
@@ -1325,7 +1325,7 @@ Obdržen požadavek na výměnu klíčů pro neplatnou verzi protokolu.
   <string name="ThreadRecord_draft">Koncept:</string>
   <string name="ThreadRecord_called">Vy jste volal</string>
   <string name="ThreadRecord_called_you">Volal vás</string>
-  <string name="ThreadRecord_missed_call">Zmeškaný hovor</string>
+  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">Zmeškaný hovor</string> -->
   <string name="ThreadRecord_media_message">Multimediální zpráva</string>
   <string name="ThreadRecord_sticker">Nálepka</string>
   <string name="ThreadRecord_view_once_photo">Fotografie pro jednorázové zobrazení</string>
