--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -806,7 +806,7 @@
   <string name="MessageRecord_you_updated_group">Du hast die Gruppe aktualisiert.</string>
   <string name="MessageRecord_the_group_was_updated">Die Gruppe wurde aktualisiert.</string>
   <string name="MessageRecord_you_called_date">Ausgehender Anruf · %1$s</string>
-  <string name="MessageRecord_missed_call_date">Entgangener Anruf · %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_date">Entgangener Anruf · %1$s</string> -->
   <string name="MessageRecord_s_updated_group">%s hat die Gruppe aktualisiert.</string>
   <string name="MessageRecord_s_called_you_date">Empfangener Anruf von %1$s · %2$s</string>
   <string name="MessageRecord_called_s">Ausgehender Anruf an %s</string>
@@ -1222,7 +1222,7 @@ Schlüsselaustausch-Nachricht für eine ungültige Protokollversion empfangen</s
   <string name="ThreadRecord_draft">Entwurf:</string>
   <string name="ThreadRecord_called">Ausgehender Anruf</string>
   <string name="ThreadRecord_called_you">Empfangener Anruf</string>
-  <string name="ThreadRecord_missed_call">Entgangener Anruf</string>
+  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">Entgangener Anruf</string> -->
   <string name="ThreadRecord_media_message">Nachricht mit Medieninhalten</string>
   <string name="ThreadRecord_sticker">Sticker</string>
   <string name="ThreadRecord_view_once_photo">Einmalig anzeigbares Foto</string>
