--- a/app/src/main/res/values-eu/strings.xml
+++ b/app/src/main/res/values-eu/strings.xml
@@ -806,7 +806,7 @@
   <string name="MessageRecord_you_updated_group">Taldea eguneratu duzu</string>
   <string name="MessageRecord_the_group_was_updated">Taldea eguneratu egin da.</string>
   <string name="MessageRecord_you_called_date">Deitu zenuen · %1$s</string>
-  <string name="MessageRecord_missed_call_date">Dei galdua · %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_date">Dei galdua · %1$s</string> -->
   <string name="MessageRecord_s_updated_group">%s-ek taldea eguneratu du.</string>
   <string name="MessageRecord_s_called_you_date">%1$s erabiltzaileak deitu dizu · %2$s</string>
   <string name="MessageRecord_called_s">%s-(e)ri deitu duzu</string>
@@ -1233,7 +1233,7 @@ Gakoaren elkar-trukeraro mezua jaso da protokoloaren bertsio baliogabe baterako.
   <string name="ThreadRecord_draft">Zirriborroa:</string>
   <string name="ThreadRecord_called">Deitu duzu</string>
   <string name="ThreadRecord_called_you">Deitu dizu</string>
-  <string name="ThreadRecord_missed_call">Erantzun gabeko deia</string>
+  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">Erantzun gabeko deia</string> -->
   <string name="ThreadRecord_media_message">Multimedia mezua</string>
   <string name="ThreadRecord_sticker">Eranskailua</string>
   <string name="ThreadRecord_view_once_photo">Behin ikusteko argazkia</string>
