--- a/app/src/main/res/values-fi/strings.xml
+++ b/app/src/main/res/values-fi/strings.xml
@@ -805,7 +805,7 @@
   <string name="MessageRecord_you_updated_group">Sinä päivitit ryhmää.</string>
   <string name="MessageRecord_the_group_was_updated">Ryhmä päivitettiin.</string>
   <string name="MessageRecord_you_called_date">Soitit puhelun · %1$s</string>
-  <string name="MessageRecord_missed_call_date">Vastaamaton puhelu · %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_date">Vastaamaton puhelu · %1$s</string> -->
   <string name="MessageRecord_s_updated_group">%s päivitti ryhmää.</string>
   <string name="MessageRecord_s_called_you_date">%1$s soitti sinulle · %2$s</string>
   <string name="MessageRecord_called_s">Soitit puhelun: %s</string>
@@ -1226,7 +1226,7 @@ Vastaanotetiin avaintenvaihtoviesti, joka kuuluu väärälle protokollaversiolle
   <string name="ThreadRecord_draft">Luonnos:</string>
   <string name="ThreadRecord_called">Soitit puhelun</string>
   <string name="ThreadRecord_called_you">Soitti sinulle</string>
-  <string name="ThreadRecord_missed_call">Vastaamatta jäänyt puhelu</string>
+  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">Vastaamatta jäänyt puhelu</string> -->
   <string name="ThreadRecord_media_message">Mediaviesti</string>
   <string name="ThreadRecord_sticker">Tarra</string>
   <string name="ThreadRecord_view_once_photo">Kerran katsottava kuva</string>
