--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -806,7 +806,7 @@
   <string name="MessageRecord_you_updated_group">Hai aggiornato il gruppo.</string>
   <string name="MessageRecord_the_group_was_updated">Il gruppo è stato aggiornato.</string>
   <string name="MessageRecord_you_called_date">Hai chiamato · %1$s</string>
-  <string name="MessageRecord_missed_call_date">Chiamata persa · %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_date">Chiamata persa · %1$s</string> -->
   <string name="MessageRecord_s_updated_group">%s ha aggiornato il gruppo.</string>
   <string name="MessageRecord_s_called_you_date">%1$s ti ha chiamato · %2$s</string>
   <string name="MessageRecord_called_s">Hai chiamato %s</string>
@@ -1233,7 +1233,7 @@
   <string name="ThreadRecord_draft">Bozza:</string>
   <string name="ThreadRecord_called">Hai chiamato</string>
   <string name="ThreadRecord_called_you">Ti ha chiamato</string>
-  <string name="ThreadRecord_missed_call">Chiamata persa</string>
+  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">Chiamata persa</string> -->
   <string name="ThreadRecord_media_message">Messaggio multimediale</string>
   <string name="ThreadRecord_sticker">Adesivo</string>
   <string name="ThreadRecord_view_once_photo">Foto visualizzabile una volta</string>
