--- a/app/src/main/res/values-iw/strings.xml
+++ b/app/src/main/res/values-iw/strings.xml
@@ -876,7 +876,7 @@
   <string name="MessageRecord_you_updated_group">עדכנת את הקבוצה.</string>
   <string name="MessageRecord_the_group_was_updated">הקבוצה עודכנה.</string>
   <string name="MessageRecord_you_called_date">את/ה התקשרת · %1$s</string>
-  <string name="MessageRecord_missed_call_date">שיחה שלא נענתה · %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_date">שיחה שלא נענתה · %1$s</string> -->
   <string name="MessageRecord_s_updated_group">%s עדכן את הקבוצה.</string>
   <string name="MessageRecord_s_called_you_date">%1$s התקשר/ה אליך · %2$s</string>
   <string name="MessageRecord_called_s">התקשרת אל %s</string>
@@ -1327,7 +1327,7 @@
   <string name="ThreadRecord_draft">טיוטה:</string>
   <string name="ThreadRecord_called">התקשרת</string>
   <string name="ThreadRecord_called_you">התקשר אליך</string>
-  <string name="ThreadRecord_missed_call">שיחה שלא נענתה</string>
+  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">שיחה שלא נענתה</string> -->
   <string name="ThreadRecord_media_message">הודעת מדיה</string>
   <string name="ThreadRecord_sticker">מדבקה</string>
   <string name="ThreadRecord_view_once_photo">תמונה לצפייה חד־פעמית</string>
