--- a/app/src/main/res/values-lt/strings.xml
+++ b/app/src/main/res/values-lt/strings.xml
@@ -876,7 +876,7 @@
   <string name="MessageRecord_you_updated_group">Jūs atnaujinote grupę.</string>
   <string name="MessageRecord_the_group_was_updated">Grupė buvo atnaujinta.</string>
   <string name="MessageRecord_you_called_date">Jūs skambinote · %1$s</string>
-  <string name="MessageRecord_missed_call_date">Praleistas skambutis · %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_date">Praleistas skambutis · %1$s</string> -->
   <string name="MessageRecord_s_updated_group">%s atnaujino grupę.</string>
   <string name="MessageRecord_s_called_you_date">Jums skambino %1$s · %2$s</string>
   <string name="MessageRecord_called_s">Skambino %s</string>
@@ -1327,7 +1327,7 @@
   <string name="ThreadRecord_draft">Juodraštis:</string>
   <string name="ThreadRecord_called">Jūs skambinote</string>
   <string name="ThreadRecord_called_you">Jums skambino</string>
-  <string name="ThreadRecord_missed_call">Praleistas skambutis</string>
+  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">Praleistas skambutis</string> -->
   <string name="ThreadRecord_media_message">Medijos žinutė</string>
   <string name="ThreadRecord_sticker">Lipdukas</string>
   <string name="ThreadRecord_view_once_photo">Vienkartinės peržiūros nuotrauka</string>
