--- a/app/src/main/res/values-sl/strings.xml
+++ b/app/src/main/res/values-sl/strings.xml
@@ -876,7 +876,7 @@
   <string name="MessageRecord_you_updated_group">Posodobili ste skupino.</string>
   <string name="MessageRecord_the_group_was_updated">Skupina je bila posodobljena</string>
   <string name="MessageRecord_you_called_date">Klicali ste · %1$s</string>
-  <string name="MessageRecord_missed_call_date">Zgrešen klic · %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_date">Zgrešen klic · %1$s</string> -->
   <string name="MessageRecord_s_updated_group">Oseba %s je posodobila skupino.</string>
   <string name="MessageRecord_s_called_you_date">Uporabnik/ca %1$s vas je klical/a · %2$s</string>
   <string name="MessageRecord_called_s">Klicali ste: %s</string>
@@ -1318,7 +1318,7 @@ Prejeto sporočilo za izmenjavo ključev za napačno različico protokola.</stri
   <string name="ThreadRecord_draft">Osnutek:</string>
   <string name="ThreadRecord_called">Klicali ste</string>
   <string name="ThreadRecord_called_you">Dohodni klic</string>
-  <string name="ThreadRecord_missed_call">Neodgovorjen klic</string>
+  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">Neodgovorjen klic</string> -->
   <string name="ThreadRecord_media_message">Večpredstavno sporočilo</string>
   <string name="ThreadRecord_sticker">Nalepka</string>
   <string name="ThreadRecord_view_once_photo">Slika za enkraten ogled</string>
