--- a/app/src/main/res/values-sq/strings.xml
+++ b/app/src/main/res/values-sq/strings.xml
@@ -809,7 +809,7 @@ të përditësojnë Signal-in, ose t’i hiqni para krijimit të grupit.</item>
   <string name="MessageRecord_you_updated_group">E përditësuat grupin.</string>
   <string name="MessageRecord_the_group_was_updated">Grupi u përditësua.</string>
   <string name="MessageRecord_you_called_date">Thirrët · %1$s</string>
-  <string name="MessageRecord_missed_call_date">Thirrje e humbur · %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_date">Thirrje e humbur · %1$s</string> -->
   <string name="MessageRecord_s_updated_group">%s përditësoi grupin.</string>
   <string name="MessageRecord_s_called_you_date">%1$s ju thirri · %2$s</string>
   <string name="MessageRecord_called_s">Thirrët %s</string>
@@ -1232,7 +1232,7 @@ të përditësojnë Signal-in, ose t’i hiqni para krijimit të grupit.</item>
   <string name="ThreadRecord_draft">Skicë:</string>
   <string name="ThreadRecord_called">Ju thirrët</string>
   <string name="ThreadRecord_called_you">Ju thirri</string>
-  <string name="ThreadRecord_missed_call">Thirrje e humbur</string>
+  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">Thirrje e humbur</string> -->
   <string name="ThreadRecord_media_message">Mesazh media</string>
   <string name="ThreadRecord_sticker">Ngjitës</string>
   <string name="ThreadRecord_view_once_photo">Foto për t’u parë vetëm një herë</string>
