--- a/app/src/main/res/values-sv/strings.xml
+++ b/app/src/main/res/values-sv/strings.xml
@@ -806,7 +806,7 @@
   <string name="MessageRecord_you_updated_group">Du uppdaterade gruppen.</string>
   <string name="MessageRecord_the_group_was_updated">Gruppen uppdaterades.</string>
   <string name="MessageRecord_you_called_date">Du ringde · %1$s</string>
-  <string name="MessageRecord_missed_call_date">Missat samtal · %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_date">Missat samtal · %1$s</string> -->
   <string name="MessageRecord_s_updated_group">%s uppdaterade gruppen.</string>
   <string name="MessageRecord_s_called_you_date">%1$s ringde dig · %2$s</string>
   <string name="MessageRecord_called_s">Ringde %s</string>
@@ -1227,7 +1227,7 @@ Tog emot meddelande för nyckelutbyte för ogiltig protokollversion.</string>
   <string name="ThreadRecord_draft">Utkast:</string>
   <string name="ThreadRecord_called">Du ringde</string>
   <string name="ThreadRecord_called_you">Ringde dig</string>
-  <string name="ThreadRecord_missed_call">Missat samtal</string>
+  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">Missat samtal</string> -->
   <string name="ThreadRecord_media_message">Mediameddelande</string>
   <string name="ThreadRecord_sticker">Klistermärke</string>
   <string name="ThreadRecord_view_once_photo">Visa-en-gång foto</string>
