--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -342,7 +342,10 @@
   <string name="BackupsPreferenceFragment__test_your_backup_passphrase">测试备份密码并验证是否匹配</string>
   <string name="BackupsPreferenceFragment__turn_on">启用</string>
   <string name="BackupsPreferenceFragment__turn_off">关闭</string>
+  <string name="BackupsPreferenceFragment__to_restore_a_backup">如需恢复备份，请重新安装 Signal，然后打开该应用并点击“恢复备份”，接着打开备份文件。%1$s</string>
   <string name="BackupsPreferenceFragment__learn_more">了解更多</string>
+  <string name="BackupsPreferenceFragment__in_progress">正在进行…</string>
+  <string name="BackupsPreferenceFragment__d_so_far">%1$d 到目前为止…</string>
   <string name="BackupsPreferenceFragment_signal_requires_external_storage_permission_in_order_to_create_backups">Signal 需外部存储权限，来创建备份，但该权限已永久禁用。请访问应用设置菜单，选择“权限”并启用“存储”。</string>
   <!--CustomDefaultPreference-->
   <string name="CustomDefaultPreference_using_custom">使用定制：%s</string>
@@ -354,6 +357,7 @@
   <string name="AvatarSelectionBottomSheetDialogFragment__choose_from_gallery">从相册中选择…</string>
   <string name="AvatarSelectionBottomSheetDialogFragment__remove_photo">删除图片</string>
   <string name="AvatarSelectionBottomSheetDialogFragment__taking_a_photo_requires_the_camera_permission">拍照需要相机权限。</string>
+  <string name="AvatarSelectionBottomSheetDialogFragment__viewing_your_gallery_requires_the_storage_permission">查看相册需存储权限。</string>
   <!--DateUtils-->
   <string name="DateUtils_just_now">刚刚</string>
   <string name="DateUtils_minutes_ago">%d 分钟</string>
@@ -386,6 +390,9 @@
   <string name="ExpiredBuildReminder_this_version_of_signal_has_expired">此 Signal 版本已过期，请升级到最新版本以继续收发消息。</string>
   <string name="ExpiredBuildReminder_update_now">现在升级</string>
   <!--PendingGroupJoinRequestsReminder-->
+  <plurals name="PendingGroupJoinRequestsReminder_d_pending_member_requests">
+    <item quantity="other">%d 待处理成员请求。</item>
+  </plurals>
   <string name="PendingGroupJoinRequestsReminder_view">查看</string>
   <!--ShareActivity-->
   <string name="ShareActivity_share_with">分享至</string>
@@ -763,7 +770,10 @@
   <string name="MessageRecord_left_group">您已经退出该群组。</string>
   <string name="MessageRecord_you_updated_group">您已更新该群组</string>
   <string name="MessageRecord_the_group_was_updated">群组已更新。</string>
+  <string name="MessageRecord_you_called_date">你曾致电 · %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_date">未接来电 · %1$s</string> -->
   <string name="MessageRecord_s_updated_group">%s 已更新该群组。</string>
+  <string name="MessageRecord_s_called_you_date">%1$s 曾呼叫你· %2$s</string>
   <string name="MessageRecord_called_s">曾呼叫 %s</string>
   <string name="MessageRecord_s_joined_signal">%s 加入 Signal！</string>
   <string name="MessageRecord_you_disabled_disappearing_messages">您已禁用阅后即焚。</string>
@@ -900,6 +910,8 @@
   <string name="MessageRequestBottomView_unblock">取消屏蔽</string>
   <string name="MessageRequestBottomView_do_you_want_to_let_s_message_you_they_wont_know_youve_seen_their_messages_until_you_accept">是否允许 %1$s 给您发消息并查看您的昵称头像？您同意前对方无法知晓您是否查看了其消息。</string>
   <string name="MessageRequestBottomView_do_you_want_to_let_s_message_you_wont_receive_any_messages_until_you_unblock_them">是否允许 %1$s 给您发消息并查看您的昵称头像？取消屏蔽前您将不会收到其发来的消息。</string>
+  <string name="MessageRequestBottomView_continue_your_conversation_with_this_group_and_share_your_name_and_photo">是否继续该群组对话并与其成员分享你的名称和图片？</string>
+  <string name="MessageRequestBottomView_continue_your_conversation_with_s_and_share_your_name_and_photo">是否继续与 %1$s 对话并与其分享你的名称和图片？</string>
   <string name="MessageRequestBottomView_do_you_want_to_join_this_group_they_wont_know_youve_seen_their_messages_until_you_accept">是否加入此群组并与之分享您的名字和头像？接受邀请前群成员无法知道您是否阅读了他们发来的消息。</string>
   <string name="MessageRequestBottomView_join_this_group_they_wont_know_youve_seen_their_messages_until_you_accept">是否加入此群组？接受邀请前群成员无法知道您是否阅读了他们发来的消息。</string>
   <string name="MessageRequestBottomView_unblock_this_group_and_share_your_name_and_photo_with_its_members">是否解除对该群组的屏蔽并与之分享您的名字和头像？解除屏蔽前您将不会收到其发来的消息。</string>
@@ -1059,6 +1071,7 @@
   <string name="RegistrationActivity_more_information">更多信息</string>
   <string name="RegistrationActivity_less_information">简略信息</string>
   <string name="RegistrationActivity_signal_needs_access_to_your_contacts_and_media_in_order_to_connect_with_friends">为了联系朋友，交换消息与进行加密呼叫，Signal 需要访问联系人和媒体。</string>
+  <string name="RegistrationActivity_signal_needs_access_to_your_contacts_in_order_to_connect_with_friends">为了联系朋友，交换消息与进行加密呼叫，Signal 需要访问联系人和媒体。</string>
   <string name="RegistrationActivity_rate_limited_to_service">您尝试注册此号码次数过多，请稍候再试。</string>
   <string name="RegistrationActivity_unable_to_connect_to_service">无法连接到 Signal 服务，请检查网络连接并重试。</string>
   <string name="RegistrationActivity_to_easily_verify_your_phone_number_signal_can_automatically_detect_your_verification_code">为了便于验证你的号码，在允许 Signal 读取短信时，Signal 可自动检测验证码。</string>
@@ -1174,7 +1187,7 @@
   <string name="ThreadRecord_draft">草稿：</string>
   <string name="ThreadRecord_called">您呼叫</string>
   <string name="ThreadRecord_called_you">呼叫您</string>
-  <string name="ThreadRecord_missed_call">未接来电</string>
+  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">未接来电</string> -->
   <string name="ThreadRecord_media_message">媒体消息</string>
   <string name="ThreadRecord_sticker">表情</string>
   <string name="ThreadRecord_view_once_photo">一次性图片</string>
@@ -1238,6 +1251,7 @@
   <string name="VerifyIdentityActivity_no_safety_number_to_compare_was_found_in_the_clipboard">剪切板没有可比较的安全码</string>
   <string name="VerifyIdentityActivity_signal_needs_the_camera_permission_in_order_to_scan_a_qr_code_but_it_has_been_permanently_denied">Signal 需“相机”权限，来扫描二维码，但该权限已永久禁用。请访问应用设置菜单，选择“权限”并启用“相机”。</string>
   <string name="VerifyIdentityActivity_unable_to_scan_qr_code_without_camera_permission">没有“相机”权限，无法扫描二维码</string>
+  <string name="VerifyIdentityActivity_you_must_first_exchange_messages_in_order_to_view">为了查看 %1$s 的安全码，必须首先交换消息。</string>
   <!--ViewOnceMessageActivity-->
   <!--AudioView-->
   <!--MessageDisplayHelper-->
@@ -1310,6 +1324,7 @@
   <string name="NotificationChannel_other">其他</string>
   <string name="NotificationChannel_group_messages">消息</string>
   <string name="NotificationChannel_missing_display_name">未知</string>
+  <string name="NotificationChannel_voice_notes">语音笔记</string>
   <!--ProfileEditNameFragment-->
   <string name="ProfileEditNameFragment_successfully_set_profile_name">设置个人资料名称成功。</string>
   <string name="ProfileEditNameFragment_encountered_a_network_error">网络出错。</string>
@@ -1410,6 +1425,13 @@
   <string name="ContactSelectionListFragment_username_not_found">未找到该用户名</string>
   <string name="ContactSelectionListFragment_s_is_not_a_signal_user">“%1$s”不是 Signal 用户，请检查用户名并重试。</string>
   <string name="ContactSelectionListFragment_you_do_not_need_to_add_yourself_to_the_group">您不需要将自己添加到群组中</string>
+  <string name="ContactSelectionListFragment_maximum_group_size_reached">已达到群组人数上限</string>
+  <string name="ContactSelectionListFragment_signal_groups_can_have_a_maximum_of_d_members">Signal 群组最多可有 %1$d 个成员。</string>
+  <string name="ContactSelectionListFragment_recommended_member_limit_reached">已达到建议成员数上限</string>
+  <string name="ContactSelectionListFragment_signal_groups_perform_best_with_d_members_or_fewer">成员不多于 %1$d 时 Signal 群组性能最佳。更多成员可造成消息接发延迟。</string>
+  <plurals name="ContactSelectionListFragment_d_members">
+    <item quantity="other">%1$d 个成员</item>
+  </plurals>
   <!--blocked_contacts_fragment-->
   <string name="blocked_contacts_fragment__no_blocked_contacts">没有已屏蔽联系人</string>
   <!--contact_selection_list_fragment-->
@@ -2081,6 +2103,7 @@
   <string name="ResearchMegaphoneDialog_we_believe_in_privacy"><![CDATA[<p><b>我们尊重隐私。</b></p><p>Signal 不会跟踪或搜集您的数据。我们需要用户反馈来改进 Signal ，<b>你的宝贵意见不可或缺。</b></p><p>我们正在做一份关于您使用 Signal 的调研。此调研不会搜集任何泄漏您身份的信息。若有兴趣分享更多反馈，您可以选择性提供联系方式。</p><p>如果您能抽出几分钟完成调研，我们将翘首以待。</p>]]></string>
   <string name="ResearchMegaphoneDialog_take_the_survey">参与调研</string>
   <string name="ResearchMegaphoneDialog_no_thanks">不，谢谢。</string>
+  <string name="ResearchMegaphoneDialog_the_survey_is_hosted_by_alchemer_at_the_secure_domain">该调查使用 Alchemer 并托管在安全域名 surveys.signalusers.org 上</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">传输图标</string>
   <string name="ConversationListFragment_loading">正在加载…</string>
@@ -2096,6 +2119,8 @@
   <string name="PushDecryptJob_unlock_to_view_pending_messages">解锁查看待处理消息</string>
   <string name="enter_backup_passphrase_dialog__backup_passphrase">备份密码</string>
   <string name="backup_enable_dialog__backups_will_be_saved_to_external_storage_and_encrypted_with_the_passphrase_below_you_must_have_this_passphrase_in_order_to_restore_a_backup">备份将保存至外部存储，并使用以下密码加密。备份恢复时需使用该密码。</string>
+  <string name="backup_enable_dialog__you_must_have_this_passphrase">为了恢复备份，必须提供密码。</string>
+  <string name="backup_enable_dialog__folder">文件夹</string>
   <string name="backup_enable_dialog__i_have_written_down_this_passphrase">我也记下该密码。没有密码，将无法恢复备份。</string>
   <string name="registration_activity__restore_backup">恢复备份</string>
   <string name="registration_activity__skip">跳过</string>
@@ -2121,6 +2146,7 @@
   <string name="BackupDialog_delete_backups">删除备份？</string>
   <string name="BackupDialog_disable_and_delete_all_local_backups">禁用并删除全部本地备份？</string>
   <string name="BackupDialog_delete_backups_statement">删除备份</string>
+  <string name="BackupDialog_to_enable_backups_choose_a_folder">如需启用备份，请选择用于保存备份的文件夹。</string>
   <string name="BackupDialog_choose_folder">选择文件夹</string>
   <string name="BackupDialog_copied_to_clipboard">已复制到剪切板</string>
   <string name="BackupDialog_enter_backup_passphrase_to_verify">输入备份密码进行验证</string>
@@ -2131,6 +2157,9 @@
   <string name="ChatsPreferenceFragment_last_backup_s">最近备份：%s</string>
   <string name="ChatsPreferenceFragment_in_progress">进行中</string>
   <string name="LocalBackupJob_creating_backup">正在创建备份…</string>
+  <string name="LocalBackupJobApi29_backup_failed">备份失败</string>
+  <string name="LocalBackupJobApi29_your_backup_directory_has_been_deleted_or_moved">备份目录已删除或移动。</string>
+  <string name="LocalBackupJobApi29_tap_to_manage_backups">点击以管理备份。</string>
   <string name="ProgressPreference_d_messages_so_far">已处理 %d 条消息</string>
   <string name="RegistrationActivity_please_enter_the_verification_code_sent_to_s">请输入发送至 %s 的验证码。</string>
   <string name="RegistrationActivity_wrong_number">号码错误</string>
@@ -2243,8 +2272,11 @@
   <string name="GroupLinkBottomSheet_copied_to_clipboard">已复制到剪切板</string>
   <string name="GroupLinkBottomSheet_the_link_is_not_currently_active">此链接尚未激活</string>
   <!--VoiceNotePlaybackPreparer-->
+  <string name="VoiceNotePlaybackPreparer__could_not_start_playback">无法开启播放。</string>
   <!--VoiceNoteMediaDescriptionCompatFactory-->
+  <string name="VoiceNoteMediaDescriptionCompatFactory__voice_message">语音消息 · %1$s</string>
   <string name="VoiceNoteMediaDescriptionCompatFactory__s_to_s">%1$s 至 %2$s</string>
   <!--StorageUtil-->
+  <string name="StorageUtil__s_s">%1$s/%2$s</string>
   <!--EOF-->
 </resources>
