--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -771,7 +771,7 @@
   <string name="MessageRecord_you_updated_group">你已更新群組。</string>
   <string name="MessageRecord_the_group_was_updated">該群組已更新。</string>
   <string name="MessageRecord_you_called_date">你打過的電話 · %1$s</string>
-  <string name="MessageRecord_missed_call_date">未接來電 · %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="MessageRecord_missed_call_date">未接來電 · %1$s</string> -->
   <string name="MessageRecord_s_updated_group">%s 更新了群組。</string>
   <string name="MessageRecord_s_called_you_date">%1$s 撥電話給你 · %2$s</string>
   <string name="MessageRecord_called_s">撥打給%s</string>
@@ -1182,7 +1182,7 @@
   <string name="ThreadRecord_draft">草稿：</string>
   <string name="ThreadRecord_called">向外撥號</string>
   <string name="ThreadRecord_called_you">來電</string>
-  <string name="ThreadRecord_missed_call">未接來電</string>
+  <!-- Removed by excludeNonTranslatables <string name="ThreadRecord_missed_call">未接來電</string> -->
   <string name="ThreadRecord_media_message">媒體訊息</string>
   <string name="ThreadRecord_sticker">貼圖</string>
   <string name="ThreadRecord_view_once_photo">一次性照片</string>
@@ -2099,7 +2099,7 @@
   <string name="ResearchMegaphoneDialog_we_believe_in_privacy"><![CDATA[<p><b>我們相信隱私。</b></p><p>Signal無法追踪你或收集你的資料。 為了改善所有人的Signal，我們依靠使用者反應，<b>我們會愛上你的。</b></p><p>我們正在進行一項調查，以了解你如何使用Signal。 我們的調查不會收集任何可以識別你身份的資料。 如果你有興趣分享其他回應，則可以選擇提供聯絡訊息。</p><p>如果你有幾分鐘的時間要提供反應意見，我們很高興收到你的來信。</p>]]></string>
   <string name="ResearchMegaphoneDialog_take_the_survey">參加問卷</string>
   <string name="ResearchMegaphoneDialog_no_thanks">不，謝謝。</string>
-  <string name="ResearchMegaphoneDialog_the_survey_is_hosted_by_alchemer_at_the_secure_domain">該j問卷由Alchemer託管在安全域Surveys.signalusers.org中</string>
+  <string name="ResearchMegaphoneDialog_the_survey_is_hosted_by_alchemer_at_the_secure_domain">該問卷由Alchemer託管在安全域surveys.signalusers.org中</string>
   <!--transport_selection_list_item-->
   <string name="transport_selection_list_item__transport_icon">傳輸圖示</string>
   <string name="ConversationListFragment_loading">讀取中…</string>
